--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/mongodb": "^4.0.7",
+    "express": "^4.18.2",
+    "mongose": "^0.0.2-security"
   }
 }
